# M1-Project

./: .gitignore  README.md
NearestPlane/: CMakeLists.txt  CategoryDictionary.cpp  CategoryDictionary.h  Haversine.cpp  Haversine.h  JSONHandling.cpp  JSONHandling.h  LatLong.cpp  LatLong.h  NearestPlane.cpp  NearestPlane.sln  NearestPlane.vcxproj  NearestPlane.vcxproj.filters  Plane.cpp  Plane.h  PlaneICAOPair.h  PlaneInfo.cpp  PlaneInfo.h  PlaneToPlane.cpp  PlaneToPlane.h  PointToPlane.cpp  PointToPlane.h
